Return code based on method success
