# directory/docs/swagger.yaml
@@ -464,14 +464,6 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.Topology'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Error'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Error'
         "500":
           description: Internal Server Error
           schema:
